--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/Zeesky-code/Swoosh-API#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   }
 }
